Add Info dor D10

--- a/search_api_attachments_php.info.yml
+++ b/search_api_attachments_php.info.yml
@@ -1,7 +1,7 @@
 name: Search API Attachments PHP
 type: module
 description: 'Provides a native php pdf text extractor for search_api_attachments.'
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 dependencies:
   - search_api_attachments:search_api_attachments
 package: Search
